# pyproject-template

./: .env.example  pyproject.toml  requirements.txt  tox.ini
src/utils/: constants.py
tests/: test_silly.py
